ikony w oknie konfiguracji - notify
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4510 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/modules/notify/configuration/notify.ui
+++ b/modules/notify/configuration/notify.ui
@@ -1,6 +1,6 @@
 <configuration-ui>
 
-	<section name="Notifications">
+	<section name="Notifications" icon="NotifyTab">
 
 		<tab name="General">
 			<group-box name="Notifications">
