--- a/varia/configuration/dialog.ui
+++ b/varia/configuration/dialog.ui
@@ -324,6 +324,8 @@
 					   tool-tip="'Enter' in chat send message" />
 				<check-box caption="Confirm clearing chat window" config-section="Chat" config-item="ConfirmChatClear"
 					   tool-tip="Ask before clearing chat window" />
+				<check-box caption="Save opened windows on exit" config-section="Chat" config-item="SaveOpenedWindows"
+					   tool-tip="Save opened chat windows when exiting" />
 			</group-box>
 
 			<group-box name="Closing">
