poprawki w zestawie ikon
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4513 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/modules/sms/configuration/sms.ui
+++ b/modules/sms/configuration/sms.ui
@@ -1,6 +1,6 @@
 <configuration-ui>
 
-	<section name="SMS">
+	<section name="SMS" icon="SMSTab">
 
 		<tab name="General">
 			<group-box name="Nick">
