wszystkie wartosci domyslne ale bez skrotow
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4515 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/modules/encryption/configuration/encryption.ui
+++ b/modules/encryption/configuration/encryption.ui
@@ -3,7 +3,7 @@
 	<section name="Look">
 		<tab name="Colors">
 			<group-box name="Chat">
-				<color-button caption="User nick color" config-section="Look" config-item="EncryptionColor" />
+				<color-button caption="Encypted message" config-section="Look" config-item="EncryptionColor" />
 			</group-box>
 		</tab>
     </section>
