[760] - dodawanie zestawow emotikon
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4552 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/configuration/dialog.ui
+++ b/varia/configuration/dialog.ui
@@ -213,7 +213,7 @@
 				</combo-box>
 				<combo-box caption="Emoticons theme" config-section="Chat" config-item="EmoticonsTheme" id="emoticonsTheme"
 					   tool-tip="Choose emoticons theme" />
-				<path-list-edit caption="Emoticons paths" config-section="" config-item="" id="emoticonsPaths"
+				<path-list-edit caption="Emoticons paths" config-section="Chat" config-item="EmoticonsPaths" id="emoticonsPaths"
 						tool-tip="Define emoticons paths" />
 			</group-box>
 
