--- a/varia/configuration/dialog.ui
+++ b/varia/configuration/dialog.ui
@@ -117,9 +117,9 @@
 					<item value="Invisible" caption="Invisible" />
 					<item value="Offline" caption="Offline" />
 				</combo-box>
-				<check-box caption="On statup, set last description" config-section="General" config-item="StartupLastDescription" id="onStartupSetLastDescription"
+				<check-box caption="On startup, set last description" config-section="General" config-item="StartupLastDescription" id="onStartupSetLastDescription"
 					   tool-tip="Last decription will be set on startup" />
-				<line-edit caption="On statup, set description" config-section="General" config-item="StartupDescription" id="onStartupSetDescription"
+				<line-edit caption="On startup, set description" config-section="General" config-item="StartupDescription" id="onStartupSetDescription"
 					   tool-tip="Define description which will be set on startup" />
 				<check-box caption="On shutdown, keep current description" config-section="General" config-item="DisconnectWithCurrentDescription" id="disconnectWithCurrentDescription"
 					   tool-tip="Current description will be set on shutdown" />
