--- a/modules/autoaway/configuration/autoaway.ui
+++ b/modules/autoaway/configuration/autoaway.ui
@@ -2,10 +2,10 @@
 	<section name="Status">
 		<tab name="Autoaway">
 			<group-box name="Autoaway">
-				<spin-box caption="Check idle every" config-section="General" config-item="AutoAwayCheckTime" min-value="1" max-value="10000" step="5" />
+				<spin-box caption="Check idle every" config-section="General" config-item="AutoAwayCheckTime" min-value="1" max-value="10000" step="5" suffix=" s" />
 				<check-box caption="Enable autoaway" config-section="General" config-item="AutoAway"
 					id="autoaway/enableAutoAway" />
-				<spin-box caption="Set status to away after" config-section="General" config-item="AutoAwayTime" min-value="1" max-value="10000"
+				<spin-box caption="Set status to away after" config-section="General" config-item="AutoAwayTime" min-value="1" max-value="10000" suffix=" s"
 					id="autoaway/autoAway" />
 				<check-box caption="Enable autoinvisible" config-section="General" config-item="AutoInvisible"
 					id="autoaway/enableAutoInvisible" />
@@ -25,7 +25,7 @@
 					<item value="3" caption="Add at the back" />
 				</combo-box>
 				<line-edit caption="New description" config-section="General" config-item="AutoStatusText" id="autoaway/descriptionText" />
-				<spin-box caption="Autorefresh status" config-section="General" config-item="AutoRefreshStatusTime" min-value="0" max-value="10000" tool-tip="Set 0 to disable." 
+				<spin-box caption="Autorefresh status" config-section="General" config-item="AutoRefreshStatusTime" min-value="0" max-value="10000" tool-tip="Set 0 to disable." suffix=" s"
 					id="autoaway/autoRefresh" />
 				<check-box caption="Parse AutoStatus" config-section="General" config-item="AutoParseStatus" suffix=" s"
 					id="autoaway/enableParseStatus" />
