--- a/modules/notify/configuration/notify.ui
+++ b/modules/notify/configuration/notify.ui
@@ -4,7 +4,7 @@
 
 		<tab name="General">
 			<group-box name="Notifications">
-				<combo-box caption="Notifications" config-section="" config-item="" id="notify/notifications" />
+				<combo-box caption="Event" config-section="" config-item="" id="notify/notifications" />
 			</group-box>
 		</tab>
 
