--- a/modules/notify/configuration/notify.ui
+++ b/modules/notify/configuration/notify.ui
@@ -13,7 +13,7 @@
 				<check-box caption="Notify about new messages only when window is inactive" config-section="Notify" config-item="NewMessageOnlyIfInactive" />
 			</group-box>
 			<group-box name="Status change">
-				<check-box caption="Ignore status changes from available / busy to available / busy" config-section="Notify" config-item="IgnoreOnlineToOnline" />
+				<check-box caption="Ignore status changes from available / busy to busy / available" config-section="Notify" config-item="IgnoreOnlineToOnline" />
 				<check-box caption="Ignore changes right after connection to the server" config-section="Notify" config-item="NotifyIgnoreOnConnection"
 						   tool-tip="This option will supersede tooltips with users' status\n changes upon establishing connection to the server" />
 				<check-box caption="Notify about all users" config-section="Notify" config-item="NotifyAboutAll" id="notify/notifyAll" />
