--- a/varia/configuration/dialog-look-chat-advanced.ui
+++ b/varia/configuration/dialog-look-chat-advanced.ui
@@ -19,18 +19,9 @@
 <!-- 			</group-box> -->
 
 			<group-box name="Window title">
-				<line-edit caption="Chat window title syntax" config-section="Look" config-item="ChatContents"
-						   tool-tip="Syntax: %s - status, %d - description, %i - ip, %n - nick, %a - altnick, %f - first name
-%r - surname, %m - mobile, %u - uin, %g - group, %o - return _space_ if user doesn&apos;t have us in userlist
-%v - revDNS, %p - port %e - email %x - max image size" />
-				<line-edit caption="Conference window title prefix" config-section="Look" config-item="ConferencePrefix"
-						   tool-tip="Syntax: %s - status, %d - description, %i - ip, %n - nick, %a - altnick, %f - first name
-%r - surname, %m - mobile, %u - uin, %g - group, %o - return _space_ if user doesn&apos;t have us in userlist
-%v - revDNS, %p - port %e - email %x - max image size" />
-				<line-edit caption="Conference window title syntax" config-section="Look" config-item="ConferenceContents"
-						   tool-tip="Syntax: %s - status, %d - description, %i - ip, %n - nick, %a - altnick, %f - first name
-%r - surname, %m - mobile, %u - uin, %g - group, %o - return _space_ if user doesn&apos;t have us in userlist
-%v - revDNS, %p - port %e - email %x - max image size" />
+				<line-edit caption="Chat window title syntax" config-section="Look" config-item="ChatContents" id="chatSyntax" />
+				<line-edit caption="Conference window title prefix" config-section="Look" config-item="ConferencePrefix" id="conferencePrefix" />
+				<line-edit caption="Conference window title syntax" config-section="Look" config-item="ConferenceContents" id="conferenceSyntax" />
 			</group-box>
 		</tab>
 	</section>
