popularne żądanie: dymki ze zmianami statusu domyślnie nie otwierają okna rozmowy po kliknięciu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4766 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/modules/notify/configuration/notify.ui
+++ b/modules/notify/configuration/notify.ui
@@ -11,6 +11,7 @@
 		<tab name="Options">
 			<group-box name="New messages">
 				<check-box caption="Notify about new messages only when window is inactive" config-section="Notify" config-item="NewMessageOnlyIfInactive" />
+				<check-box caption="Allow opening chat with events other than 'New chat'" config-section="Notify" config-item="OpenChatOnEveryNotification" />
 			</group-box>
 			<group-box name="Status change">
 				<check-box caption="Ignore status changes from available / busy to busy / available" config-section="Notify" config-item="IgnoreOnlineToOnline" />
