--- a/varia/configuration/dialog.ui
+++ b/varia/configuration/dialog.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration-ui>
-	<section name="Kadu" icon="AboutIcon">
+	<section name="Kadu" icon="KaduTab">
 		<tab name="Kadu">
 			<group-box name="Language">
 				<combo-box caption="Language" config-section="General" config-item="Language" id="languages"
