poprawki wyboru opery; dodany seamonkey
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4795 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/varia/configuration/dialog.ui
+++ b/varia/configuration/dialog.ui
@@ -22,6 +22,7 @@
 					<item value="Opera" caption="Opera" />
 					<item value="Opera (new tab)" caption="Opera (new tab)" />
 					<item value="Mozilla" caption="Mozilla" />
+					<item value="SeaMonkey" caption="SeaMonkey" />
 					<item value="Mozilla Firefox" caption="Mozilla Firefox" />
 					<item value="Dillo" caption="Dillo" />
 					<item value="Galeon" caption="Galeon" />
