"Nie odświeżaj" w konfiguracji gdy Autoodświeżanie statusu ustawione na 0
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4877 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/modules/autoaway/configuration/autoaway.ui
+++ b/modules/autoaway/configuration/autoaway.ui
@@ -25,7 +25,7 @@
 					<item value="3" caption="Add at the back" />
 				</combo-box>
 				<line-edit caption="New description" config-section="General" config-item="AutoStatusText" id="autoaway/descriptionText" />
-				<spin-box caption="Autorefresh status" config-section="General" config-item="AutoRefreshStatusTime" min-value="0" max-value="10000" tool-tip="Set 0 to disable." suffix=" s"
+				<spin-box caption="Autorefresh status" config-section="General" config-item="AutoRefreshStatusTime" min-value="0" max-value="10000" suffix=" s"
 					id="autoaway/autoRefresh" />
 				<check-box caption="Parse AutoStatus" config-section="General" config-item="AutoParseStatus" suffix=" s"
 					id="autoaway/enableParseStatus" />
